--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,96 @@
---extra-index-url https://download.pytorch.org/whl/cu124
-torch
-modelscope
-transformers
-accelerate
-peft
-datasets
-pandas
-scipy
-scikit-learn
+accelerate==1.10.1
+addict==2.4.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aiosignal==1.4.0
+aliyun-python-sdk-core==2.16.0
+aliyun-python-sdk-kms==2.16.5
+anyio==4.12.1
+async-timeout==5.0.1
+attrs==25.4.0
+certifi==2025.6.15
+cffi==2.0.0
+charset-normalizer==3.4.2
+contourpy==1.3.2
+crcmod==1.7
+cryptography==46.0.4
+cycler==0.12.1
+datasets==2.18.0
+dill==0.3.6
+einops==0.8.2
+exceptiongroup==1.3.1
+filelock==3.18.0
+fonttools==4.60.1
+frozenlist==1.8.0
+fsspec==2024.2.0
+gast==0.7.0
+h11==0.16.0
+hf-xet==1.1.5
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.33.4
+idna==3.10
+Jinja2==3.1.4
+jmespath==0.10.0
+joblib==1.5.2
+kiwisolver==1.4.9
+MarkupSafe==2.1.5
+matplotlib==3.10.7
+modelscope==1.14.0
+mpmath==1.3.0
+multidict==6.7.1
+multiprocess==0.70.14
+networkx==3.3
+numpy==1.24.3
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.1.105
+nvidia-nvtx-cu12==12.1.105
+oss2==2.19.1
+packaging==25.0
+pandas==2.3.3
+peft==0.18.1
+pillow==11.0.0
+platformdirs==4.5.1
+propcache==0.4.1
+psutil==7.0.0
+pyarrow==23.0.0
+pyarrow-hotfix==0.7
+pycparser==3.0
+pycryptodome==3.23.0
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.4
+safetensors==0.5.3
+scikit-learn==1.7.2
+scipy==1.15.3
+simplejson==3.20.2
+six==1.17.0
+sortedcontainers==2.4.0
+sympy==1.13.1
+threadpoolctl==3.6.0
+tokenizers==0.21.2
+tomli==2.4.0
+torch==2.5.1+cu121
+torchaudio==2.5.1+cu121
+torchvision==0.20.1+cu121
+tqdm==4.67.1
+transformers==4.53.2
+triton==3.1.0
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
+xxhash==3.6.0
+yapf==0.43.0
+yarl==1.22.0
